; From earley 3.0.0: pa_ocaml sources that were only linked into the pa_ocaml
; executable upstream. Exposed as a library to replace earley.ocaml (removed
; from the opam earley 3.0.0 package). AST types use compiler-libs.common.
; Earley `parser` syntax has been expanded to plain OCaml (no pa_ocaml at build).

(library
 (name patoline_ocaml)
 (wrapped false)
 (flags (:standard -w -39-27-9-33))
 (modules pa_ast pa_lexing pa_main pa_ocaml pa_ocaml_prelude pa_parser)
 (libraries earley.core earley.str compiler-libs.common))
