(library
  (name typography)
  (public_name patoline.typography)
  ; Dev helper using Graphics; not required for the library (see optional exe below).
  (modules :standard \ test_offset)
  (libraries
    patoraw patutil patconfig patfonts
    (select ConfigFindFont.ml from
      (fontconfig -> ConfigFindFont.fontconfig.ml)
      (           -> ConfigFindFont.legacy.ml))))
